--- a/index.html
+++ b/index.html
@@ -156,9 +156,9 @@
             <div class="footer__column-block">
               <p class="footer__column-heading">Соцсети</p>
               <ul class="footer__list-links">
-                <li class="footer__social-icon"><a href="#" class="footer__icon" lang="en"><img src="./images/facebook_white.svg" alt=""></a><a class="footer__social-link" href="#" lang="en">Facebook</a></li>
+                <li class="footer__social-icon"><a href="#" class="footer__icon" lang="en"><img src="./images/facebook_white.svg" alt=""></a><a class="footer__social-link" href="#" lang="ru">Facebook</a></li>
                 <li class="footer__social-icon"><a href="#" class="footer__icon" lang="en"><img src="./images/vk_white.svg" alt=""></a><a href="#" class="footer__social-link" lang="ru">ВКонтакте</a></li>
-                <li class="footer__social-icon"><a href="#" class="footer__icon" lang="en"><img src="./images/instagram_white.svg" alt=""></a><a href="#" class="footer__social-link" lang="en">Instagram</a></li>
+                <li class="footer__social-icon"><a href="#" class="footer__icon" lang="en"><img src="./images/instagram_white.svg" alt=""></a><a href="#" class="footer__social-link" lang="ru">Instagram</a></li>
               </ul>
             </div>  
           </nav>
