--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="./styles/normalize.css">
-  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./vendor/normalize.css">
+  <link rel="stylesheet" href="./pages/index.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="keywords" content="html, css">
   <meta name="author" content="Разливахин Михаил">
@@ -21,6 +21,7 @@
         <div class="header__square-pic"></div>
     </header>
     <main class="content">
+
       <section class="description">
         <div class="two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
@@ -31,6 +32,66 @@
           </ul>
          </div>
       </section>
+
+      <section class="technics">
+        <h2 class="section-title">Техники обучения</h2>
+        <p class="section-subtitle">Пять практик от Барбары Оакли</p>
+        <div class="cards">
+          <div class="cards__item">
+            <img class="cards__image" src="./images/images_sprint-2/attention.png" alt="книга в руках">
+            <h3 class="cards__title">Два вида внимания</h3>
+            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+          </div>
+          <div class="cards__item">
+            <img class="cards__image" src="./images/images_sprint-2/recall.png" alt="скульптура мальчика">
+            <h3 class="cards__title">Recall</h3>
+            <p class="cards__description">Вспоминайте изученное - это позволит соединить разрозненные порции памяти.</p>
+          </div>
+          <div class="cards__item">
+            <img class="cards__image" src="./images/images_sprint-2/interliving.png" alt="многолюдный холл">
+            <h3 class="cards__title">Интерливинг</h3>
+            <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+          </div>
+          <div class="cards__item">
+            <img class="cards__image" src="./images/images_sprint-2/question.png" alt="комната с множеством дверей">
+            <h3 class="cards__title">Вопросы</h3>
+            <p class="cards__description">Слушай преподавателя, придумывай хороший вопрос, который вас действительно волнует.</p>
+          </div>
+          <div class="cards__item">
+            <img class="cards__image" src="./images/images_sprint-2/competence.png" alt="стопка книг">
+            <h3 class="cards__title">Иллюзия компетентности</h3>
+            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+          </div>          
+        </div>
+      </section>
+
+      <section class="video">
+        <h2 class="section-title">Видео на TED</h2>
+        <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
+        <div class="video__iframes">
+          <iframe class="video__iframe" id="ytplayer" type="text/html" src="https://www.youtube.com/embed/5MgBikgcWnY"
+frameborder="0" allowfullscreen>Здравствуйте, ваш браузер не может показать классную штуку, потому что не поддерживает iframe.</iframe>
+          <iframe class="video__iframe" id="ytplayer" type="text/html" src="https://www.youtube.com/embed/arj7oStGLkU"
+frameborder="0" allowfullscreen>Здравствуйте, ваш браузер не может показать классную штуку, потому что не поддерживает iframe.</iframe>
+        </div>
+      </section>
+
+      <section class="oakley">
+        <div class="two-columns">
+          <h2 class="two-columns__brief">История Барбары Оакли</h2>
+          <ul class="two-columns__main-text">
+            <li class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причем далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что ее выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то "плохо дается", ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="feinman">        
+        <h2 class="feinman__title">Метод Фейнмана</h2>
+        <p class="feinman__subtitle">Выучить и не забыть.</p>
+        <a href="#" class="feinman__link" lang="ru">Подробнее &rarr;</a>
+        <img class="feinman__image" src="./images/feinman.png" alt="feinman">
+      </section>
+
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
         <p class="section-subtitle">Про учебу и мозг</p>
@@ -71,12 +132,21 @@
           </div>
         </div>
       </section>
-      <section class="feinman">        
-        <h2 class="feinman__title">Метод Фейнмана</h2>
-        <p class="feinman__subtitle">Выучить и не забыть.</p>
-        <a href="#" class="feinman__link" lang="ru">Подробнее &rarr;</a>
-        <img class="feinman__image" src="./images/feinman.png" alt="feinman">
+
+      <section class="khan">       
+        <div class="khan__container">
+          <p class="khan__author">Салман Хан</p>
+          <h2 class="khan__title">Весь мир - школа</h2>
+          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов стужентов по всему миру. Книгу "Весь мир - школа" нужно прочитать всем, кто занимается образованием - так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+          <p class="khan__quote-author">Джордж Лукас</p>
+          <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+          <div class="khan__book-container">
+            <img class="khan__book-pic" src="./images/images_sprint-2/book.jpg" alt="книга Весь мир - школа">
+            <a href="#" class="khan__buy-link" lang="ru">Купить книгу &rarr;</a>
+          </div>
+        </div>
       </section>
+      
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
         <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
@@ -123,7 +193,19 @@
           </div>
           <img class="kaufman__triangle" src="./images/triangle.svg" alt="triangle">
         </div>
-       </section>  
+       </section>       
+       
+       <section class="resources">
+        <h2 class="section-title">Полезные ресурсы</h2>
+        <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+        <div class="resources__logo-zone">
+          <a href="#" lang="ru"><img class="resources__logo" src="./images/images_sprint-2/logo/arzamas.svg" alt="лого Арзамас"></a>
+          <a href="#" lang="ru"><img class="resources__logo" src="./images/images_sprint-2/logo/n1.svg" alt="лого Н+1"></a>
+          <a href="#" lang="ru"><img class="resources__logo" src="./images/images_sprint-2/logo/strelka.svg" alt="лого Стрелка"></a>
+          <a href="#" lang="ru"><img class="resources__logo" src="./images/images_sprint-2/logo/polka.svg" alt="лого Полка"></a>
+        </div>
+      </section>
+
     </main>
     <footer class="footer">      
       <div class="footer__columns">
